--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.3",
     "solid-js": "^1.4.3",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "zdog": "^1.1.3"
+  },
+  "devDependencies": {
+    "@types/zdog": "^1.1.2"
   }
 }
