--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/solid-js": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.3",
+    "simple-spring": "^1.3.0",
     "solid-js": "^1.4.3",
     "tailwindcss": "^3.0.24",
     "zdog": "^1.1.3"
