--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/markdoc": "^0.0.2",
-    "@astrojs/solid-js": "^2.1.0",
-    "@astrojs/tailwind": "^3.1.1",
-    "astro": "^2.3.0",
+    "@astrojs/markdoc": "^0.4.0",
+    "@astrojs/solid-js": "^2.2.0",
+    "@astrojs/svelte": "^2.2.0",
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.7.3",
+    "lucide-solid": "^0.258.0",
     "simple-spring": "^1.3.0",
     "solid-js": "^1.4.3",
-    "tailwindcss": "^3.0.24",
-    "zdog": "^1.1.3"
+    "svelte": "^3.54.0",
+    "tailwindcss": "^3.3.2",
+    "zdog": "^1.1.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/zdog": "^1.1.2"
   }
 }
