--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/solid-js": "^2.2.0",
     "@astrojs/svelte": "^2.2.0",
     "@astrojs/tailwind": "^4.0.0",
+    "@fontsource/atkinson-hyperlegible": "^5.0.4",
     "astro": "^2.7.3",
     "lucide-solid": "^0.258.0",
     "simple-spring": "^1.3.0",
